--- a/web/site-plugin/package.json
+++ b/web/site-plugin/package.json
@@ -10,6 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@alemdev/marca-components": "^0.0.1",
+    "@fontsource/montserrat": "^5.0.17",
     "astro": "^4.5.5",
     "preact": "^10.19.6",
     "tailwindcss": "^3.4.1",
