--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@angel.erazo/marca-components",
+  "name": "@alemdev/marca-components",
   "version": "0.0.1",
-  "description": "",
-  "main": "/src/index.js",
+  "description": "This project aims to leverage the power of Tailwind CSS by integrating a specialized component plugin.",
+  "main": "./src/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,12 +12,10 @@
   "license": "ISC",
   "devDependencies": {
     "postcss": "^8.4.35",
-    "tailwindcss": "3.4.1"
+    "tailwindcss": "3.4.1",
+    "@csstools/postcss-minify": "^1.1.1"
   },
   "peerDependencies": {
     "tailwindcss": "^3.0.0"
-  },
-  "dependencies": {
-    "@csstools/postcss-minify": "^1.1.1"
   }
 }
