--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alemdev/marca-components",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "This project aims to leverage the power of Tailwind CSS by integrating a specialized component plugin.",
   "main": "./src/index.js",
   "type": "module",
@@ -9,7 +9,7 @@
   },
   "keywords": [],
   "author": "Angel Erazo",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "postcss": "^8.4.35",
     "tailwindcss": "3.4.1",
