--- a/web/site-plugin/package.json
+++ b/web/site-plugin/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@alemdev/marca-components": "^0.0.2",
+    "@astrojs/vercel": "^7.4.0",
     "@fontsource/montserrat": "^5.0.17",
-    "@vercel/analytics": "^1.2.2",
     "astro": "^4.5.5",
     "preact": "^10.19.6",
     "tailwindcss": "^3.4.1",
