--- a/web/site-plugin/package.json
+++ b/web/site-plugin/package.json
@@ -13,6 +13,7 @@
     "@alemdev/marca-components": "^0.0.4",
     "@astrojs/vercel": "^7.4.0",
     "@fontsource/montserrat": "^5.0.17",
+    "@vercel/speed-insights": "^1.0.10",
     "astro": "^4.5.5",
     "preact": "^10.19.6",
     "tailwindcss": "^3.4.1",
